Closed Bug 777193 Opened 13 years ago Closed 13 years ago

Fix warning about extra semicolon in APKOpen.cpp

Categories

(Core :: mozglue, defect)

ARM
Android
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla17
Tracking Status
firefox14 --- unaffected
firefox15 --- affected
firefox16 --- affected
firefox17 --- fixed

People

(Reporter: cpeterson, Assigned: cpeterson)

Details

Attachments

(1 file)

mozilla/central/mozglue/android/APKOpen.cpp:326: warning: extra ';'
Attachment #645612 - Flags: review?(mh+mozilla)
Attachment #645612 - Flags: review?(mh+mozilla) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla17
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: