Bug 777193 - Fix warning about extra semicolon in APKOpen.cpp. r=glandium

--HG--
extra : rebase_source : c4650aabcff018a6b53f4e669a405f14cacb3aed